# Data-Driven-Platform-for-Stock-Analysis-and-Prediction-

./: .gitignore  README.md
Stock Analyze/: app.py  models.py  pyproject.toml
Stock Analyze/modules/: capm.py  index_predictor.py  market_overview.py  predictions.py  stock_data.py  technical_indicators.py
Stock Analyze/static/js/: stockDetails.js
Stock Analyze/templates/: compare.html  dashboard.html  demo_trading.html  index.html  index_prediction.html  ipo.html  login.html  profile.html  signup.html  stock_detail.html  watchlist.html
